0.7.2
-----

 - Bugfix: include PID in install temp path to avoid process collisions

0.7.1
-----

 - Bugfix: compiling with limited output values

0.7.0
-----

 - Store solc binaries at $HOME/.solcx
 - Add locks for thread and multiprocessing safety
 - Show progress bar during installation if `tqdm` is installed

0.6.1
-----

 - Fix compatibility issues with Solidity 0.6.0
 - When installing on OSX, log a warning instead of raising if dependency installation fails
 - Ensure old versions are still visible in solcx.get_available_solc_versions

0.6.0
-----

 - Use logger instead of print statements
 - Update dependencies, fix deprecation warnings
 - Use requests package for downloads on all platforms

0.5.0
-----

 - Support for github API tokens via environment var GITHUB_TOKEN
 - Improved verbosity when get_available_solc_versions raises
 - Remove interace flag (was removed from solc in 0.4.0)
 - Raise on clone-bin and formal flags when using 0.5.x

0.4.2
-----

 - Fix link_code to support 0.5.x
 - Remove trailing whitespace on solcx.get_version_string - fixes windows 0.5.x bug

0.4.1
-----

 - Bugfix: absolute paths on windows systems
 - Allow silencing of console output when changing solc version

0.4.0
-----

 - Install new versions into solcx/temp - prevents issues with aborted installs
 - set_solc_version raises instead of installing when requested version is not installed
 - Do not allow version=None on installer methods

0.3.0
-----

 - Install and set solc version based on pragma
 - Get available solc versions, only install version if available for user's OS

0.2.1
-----

 - Bugfix when no installed version of solc is found
 - Confirm that imported versions of solc are still working

0.2.0
-----

 - Fix "No input files given" bug in `solcx.compile_source()` on v0.5.x
 - `install.py` - replace `os.path` with `pathlib.Path`
 - Linux - copy from `which solc` path to save time installing solc